[gd_scene load_steps=15 format=2]

[ext_resource path="res://shared/scenes/scenery/sky.tscn" type="PackedScene" id=1]
[ext_resource path="res://mini/platformer/scenes/characters/fluffy_platformer.tscn" type="PackedScene" id=2]
[ext_resource path="res://mini/platformer/scripts/obstacles/evil_exit_sign.gd" type="Script" id=3]
[ext_resource path="res://mini/platformer/scripts/obstacles/lava.gd" type="Script" id=4]
[ext_resource path="res://mini/platformer/scripts/platformer_minigame.gd" type="Script" id=5]
[ext_resource path="res://mini/platformer/images/platforms/bridge.png" type="Texture" id=6]
[ext_resource path="res://mini/platformer/images/background/bg.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 142.27, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 86.9017, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 287.047, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 100, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 69.0001, 88 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 103.748, 34.6233 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 56.0001, 143 )

[node name="LoseMinigame" type="Node2D"]
script = ExtResource( 5 )
_instruction = "Get to the Exit!"

[node name="Sky" parent="." instance=ExtResource( 1 )]

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FluffyPlatformer" parent="." instance=ExtResource( 2 )]
position = Vector2( 47.9442, 372.968 )

[node name="Floor1" type="StaticBody2D" parent="."]
position = Vector2( 138.699, 422.546 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor1"]
shape = SubResource( 1 )
one_way_collision = true

[node name="Floor2" type="StaticBody2D" parent="."]
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2"]
position = Vector2( 567.062, 413.84 )
shape = SubResource( 2 )
one_way_collision = true

[node name="Floor3" type="StaticBody2D" parent="."]
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor3"]
position = Vector2( 367.094, 166.972 )
shape = SubResource( 3 )
one_way_collision = true

[node name="HelpfulRamp" type="StaticBody2D" parent="."]
position = Vector2( 227.113, 185.324 )
rotation = -0.174533
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HelpfulRamp"]
shape = SubResource( 7 )
one_way_collision = true

[node name="EvilExitSign" type="Area2D" parent="."]
position = Vector2( 601, 81.0001 )
collision_layer = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EvilExitSign"]
shape = SubResource( 4 )

[node name="Lava" type="Area2D" parent="."]
position = Vector2( 381.827, 455.491 )
collision_layer = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lava"]
shape = SubResource( 5 )

[node name="Ladder" type="Area2D" parent="."]
position = Vector2( 182, 280 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder"]
shape = SubResource( 6 )

[node name="Bridge" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 382.496, 376.094 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Bridge"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bridge"]
polygon = PoolVector2Array( -119.793, 43.2021, -0.344666, -9.69638, 131.048, 38.6517 )
disabled = true

[connection signal="died" from="FluffyPlatformer" to="." method="_on_FluffyPlatformer_died"]
[connection signal="won" from="FluffyPlatformer" to="." method="_on_FluffyPlatformer_won"]
[connection signal="body_entered" from="EvilExitSign" to="EvilExitSign" method="_on_EvilExitSign_body_entered"]
[connection signal="body_entered" from="Lava" to="Lava" method="_on_Lava_body_entered"]
[connection signal="body_entered" from="Ladder" to="FluffyPlatformer" method="_on_Ladder_body_entered"]
[connection signal="body_exited" from="Ladder" to="FluffyPlatformer" method="_on_Ladder_body_exited"]
